:white_check_mark: add integration test